--- a/.c3i/Jenkinsfile
+++ b/.c3i/Jenkinsfile
@@ -1,4 +1,4 @@
 @Library('c3i@staging') _
 
 String configurationFile = '.c3i/config_v1.yml'
-c3iManager.runBuild(this, configurationFile)
+cci.runBuild(this, configurationFile)
