--- a/.c3i/config_v2.yml
+++ b/.c3i/config_v2.yml
@@ -7,10 +7,10 @@ conan:
 
 artifactory:
   url: "https://c3istg.jfrog.io/c3istg"
-  main_repo: "conan-center-v2"
-  pull-request_repo_prefix: "c3i_PR-v2"
+  main_repo: "danimtb_conan-center"
+  pull-request_repo_prefix: "danimtb_PR-v2"
   pull-request_permission: "c3i-pr"
-  logs_repo: "misc-v2"
+  logs_repo: "danimtb_logs"
   # cache_repo: "cache"
 
 github:
