Use devel branch from c3i
Signed-off-by: Uilian Ries <uilianries@gmail.com>

--- a/.c3i/Jenkinsfile
+++ b/.c3i/Jenkinsfile
@@ -1,4 +1,4 @@
-@Library('c3i@danimtb/fix_wait_for_job') _
+@Library('c3i@uilianries/timeout') _
 
 String configurationFile = '.c3i/config_v1.yml'
 cci.runBuild(this, configurationFile)
