--- a/.c3i/config_v1.yml
+++ b/.c3i/config_v1.yml
@@ -8,10 +8,10 @@ conan:
 
 artifactory:
   url: "https://c3istg.jfrog.io/c3istg"
-  main_repo: "danimtb_conan-center"
-  pull-request_repo_prefix: "danimtb_PR"
+  main_repo: "uilianries_conan-center"
+  pull-request_repo_prefix: "uilianries_PR"
   pull-request_permission: "c3i-pr"
-  logs_repo: "danimtb_logs"
+  logs_repo: "uilianries_logs"
   cache_repo: "cache"
 
 github:
