--- a/.c3i/config_v1.yml
+++ b/.c3i/config_v1.yml
@@ -11,7 +11,7 @@ artifactory:
   main_repo: "uilianries_conan-center"
   pull-request_repo_prefix: "uilianries_PR"
   pull-request_permission: "c3i-pr"
-  logs_repo: "uilianries_logs"
+  logs_repo: "misc/logs/uilianries"
   cache_repo: "cache"
 
 github:
